# SMPL

./: CMakeLists.txt  LICENSE  README.md  def.cpp  def.h  main.cpp  preprocess.py
include/: def.h
include/smpl/: exception.h  smpl.h
smpl/: TorchEx.h  def.cpp  def.h  exception.cpp  exception.h  smpl.cpp  smpl.h  smpl_maths.cpp
smpl/cuda/: blend_shape.cu  lbs.cu  regress_joints.cu  skinning.cu  smpl_maths_cuda.cu  transform.cu
src/: def.cpp  main.cpp
src/smpl/: exception.cpp  smpl.cpp  smpl_maths.cpp  smpl_maths_cuda.cu
src/tests/: Tester.cpp  smpl_tests.cpp  smpl_tests_cuda.cu
tests/: Singleton.h  Tester.cpp  smpl_tests.cpp  smpl_tests_cuda.cu
